actualizacion del boton a searach

--- a/RequestOpenlibrary/Base.lproj/Main.storyboard
+++ b/RequestOpenlibrary/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                                     <constraint firstAttribute="height" constant="30" id="ytq-cf-nre"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="webSearch"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation" returnKeyType="search" enablesReturnKeyAutomatically="YES"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.75" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oxL-pa-gBY">
                                 <rect key="frame" x="16" y="151" width="288" height="387"/>
